public/css/style.css
/* -------------------------------- 

Primary style

-------------------------------- */
*, *::after, *::before {
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
}

body {
  font-size: 1.6rem;
  font-family: "Open Sans", sans-serif;
  color: #3e454c;
  background-color: #ffffff;
}
body::after {
  clear: both;
  content: "";
  display: table;
}

a {
  color: #1784c7;
  text-decoration: none;
}

input {
  font-family: "Open Sans", sans-serif;
  font-size: 1.6rem;
}

input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration {
  display: none;
}

/* -------------------------------- 

Main Page Content

-------------------------------- */
.cd-main-content .content-wrapper {
  padding: 45px 5% 3em;
}
.cd-main-content .content-wrapper h1 {
  text-align: center;
  padding: 3em 0;
  font-size: 2rem;
}
.cd-main-content::before {
  /* never visible - used to check MQ in jQuery */
  display: none;
  content: 'mobile';
}
@media only screen and (min-width: 768px) {
  .cd-main-content .content-wrapper {
    margin-left: 110px;
    padding-top: 55px;
  }
  .cd-main-content .content-wrapper h1 {
    padding: 4em 0;
    font-size: 3.2rem;
    font-weight: 300;
  }
  .cd-main-content::before {
    content: 'tablet';
  }
}
@media only screen and (min-width: 1170px) {
  .cd-main-content .content-wrapper {
    margin-left: 200px;
  }
  .cd-main-content::before {
    content: 'desktop';
  }
}

/* -------------------------------- 

Header

-------------------------------- */
.cd-main-header {
  position: absolute;
  z-index: 2;
  top: 0;
  left: 0;
  height: 45px;
  width: 100%;
  background: #3e454c;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
.cd-main-header::after {
  clear: both;
  content: "";
  display: table;
}
@media only screen and (min-width: 768px) {
  .cd-main-header {
    position: fixed;
    height: 55px;
  }
}

.cd-logo {
  float: left;
  display: block;
  margin: 11px 0 0 5%;
}
.cd-logo img {
  display: block;
}
@media only screen and (min-width: 768px) {
  .cd-logo {
    margin: 16px 0 0 36px;
  }
}

.cd-nav-trigger {
  /* navigation trigger - visible on mobile devices only */
  float: right;
  position: relative;
  display: block;
  width: 34px;
  height: 44px;
  margin-right: 5%;
  /* hide text */
  overflow: hidden;
  white-space: nowrap;
  color: transparent;
}
.cd-nav-trigger span, .cd-nav-trigger span::before, .cd-nav-trigger span::after {
  /* hamburger icon in CSS */
  position: absolute;
  display: inline-block;
  height: 3px;
  width: 24px;
  background: #ffffff;
}
.cd-nav-trigger span {
  /* line in the center */
  position: absolute;
  top: 50%;
  right: 5px;
  margin-top: -2px;
  -webkit-transition: background 0.2s;
  -moz-transition: background 0.2s;
  transition: background 0.2s;
}
.cd-nav-trigger span::before, .cd-nav-trigger span::after {
  /* other 2 lines */
  content: '';
  right: 0;
  /* Force Hardware Acceleration in WebKit */
  -webkit-transform: translateZ(0);
  -moz-transform: translateZ(0);
  -ms-transform: translateZ(0);
  -o-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  -webkit-transform-origin: 0% 50%;
  -moz-transform-origin: 0% 50%;
  -ms-transform-origin: 0% 50%;
  -o-transform-origin: 0% 50%;
  transform-origin: 0% 50%;
  -webkit-transition: -webkit-transform 0.2s;
  -moz-transition: -moz-transform 0.2s;
  transition: transform 0.2s;
}
.cd-nav-trigger span::before {
  /* menu icon top line */
  top: -6px;
}
.cd-nav-trigger span::after {
  /* menu icon bottom line */
  top: 6px;
}
.cd-nav-trigger.nav-is-visible span {
  /* hide line in the center */
  background: rgba(255, 255, 255, 0);
}
.cd-nav-trigger.nav-is-visible span::before, .cd-nav-trigger.nav-is-visible span::after {
  /* keep visible other 2 lines */
  background: white;
}
.cd-nav-trigger.nav-is-visible span::before {
  -webkit-transform: translateX(4px) translateY(-3px) rotate(45deg);
  -moz-transform: translateX(4px) translateY(-3px) rotate(45deg);
  -ms-transform: translateX(4px) translateY(-3px) rotate(45deg);
  -o-transform: translateX(4px) translateY(-3px) rotate(45deg);
  transform: translateX(4px) translateY(-3px) rotate(45deg);
}
.cd-nav-trigger.nav-is-visible span::after {
  -webkit-transform: translateX(4px) translateY(2px) rotate(-45deg);
  -moz-transform: translateX(4px) translateY(2px) rotate(-45deg);
  -ms-transform: translateX(4px) translateY(2px) rotate(-45deg);
  -o-transform: translateX(4px) translateY(2px) rotate(-45deg);
  transform: translateX(4px) translateY(2px) rotate(-45deg);
}
@media only screen and (min-width: 768px) {
  .cd-nav-trigger {
    display: none;
  }
}

.cd-search {
  position: relative;
  margin: 1.2em 5% 0.6em;
}
.cd-search.is-hidden {
  opacity: 0;
}
.cd-search::before {
  /* lens icon */
  content: '';
  position: absolute;
  left: 8px;
  top: 50%;
  bottom: auto;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  -o-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 16px;
  width: 16px;
  background: url(../img/cd-search.svg) no-repeat 0 0;
}
.cd-search input {
  padding-left: 32px;
  width: 100%;
  height: 36px;
  border: none;
  border-radius: .25em;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  -o-appearance: none;
  appearance: none;
}
.cd-search input:focus {
  outline: none;
}
/* ... */

